# libDAI

./: CMakeLists.txt
include/dai/: alldai.h  prob.h  util.h
src/: bp.cpp  graph.cpp  lc.cpp  mf.cpp  util.cpp
utils/: createfg.cpp
